# Active-Inference-Painter

./: .gitattributes  .gitignore  AGENTS.md  AUDIT.md  CODEX_TASK.md  README.md  RESEARCH_CHARTER.md  pyproject.toml  requirements.txt
planning/: GANTT.md  M0-operating-system.md  M1-baseline-lock.md  M2-mujoco-abstract-clone.md  M3-mujoco-backend-adapter.md  PROJECT_TRACKER.md  README.md
src/active_painter/: __init__.py  action_encoding.py  agent.py  arm_agent_driver.py  arm_control.py  arm_sim.py  arm_visualizer.py  canvas_hierarchy.py  composition.py  config.py  demo.py  efe.py  efe_common.py  env.py  inference.py  local_spatial.py  models.py  motor_planning.py  motor_reliability.py  passage_inference.py  policies.py  preferences.py  replay.py  spatial_agent.py  spatial_efe.py  spatial_hierarchy.py  spatial_inference.py  spatial_state.py  stroke_execution.py  telemetry_log.py  version.py  web_runtime.py  web_server.py
tests/: test_action_encoding.py  test_arm_agent_driver.py  test_arm_sim.py  test_arm_visualizer.py  test_canvas.py  test_canvas_hierarchy.py  test_composition_hierarchy.py  test_ensemble_calibration.py  test_epistemic_policy_selection.py  test_local_spatial.py  test_motor_reliability.py  test_motor_telemetry.py  test_passage_inference.py  test_policies.py  test_preferences.py  test_spatial_hierarchy.py  test_spatial_state.py  test_stop_policy.py  test_stop_prior.py  test_stroke_execution.py  test_web_runtime.py
web/: index.html  main.js  style.css
