[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "active-inference-painter"
version = "0.1.0"
description = "Strict active-inference painting scaffold with terminal coverage preferences"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
mujoco = ["mujoco>=3.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
